# RepoSiphon

./: .gitignore  README.md  pyproject.toml
src/getthefiles/: cli.py  core.py
src/siphon/: cli.py  core.py  threading_manager.py  utils.py
test/: utils_test.py
