
[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "dr-dl" 

dependencies = [
    "typer[standard]>=0.9.0", 
    "requests>=2.31.0",
]

requires-python = ">=3.9"

authors = [
    {name = "Henry Wang", email = "henry.reiwang.work@gmail.com"},
]
license = {text = "MIT License"} 
description = "A fast, non-cloning CLI tool to download specific sub-directories from GitHub repositories."

[project.scripts]
dr-dl = "getthefiles.main_cli:app" 

